--- a/pet-clinic-web/src/main/resources/templates/owners/index.html
+++ b/pet-clinic-web/src/main/resources/templates/owners/index.html
@@ -5,7 +5,24 @@
     <title>Title</title>
 </head>
 <body>
+<!--/*@thymesVar id="owner" type="gipsy.springframework.petclinic.model.Owner"*/-->
     <h1 th:text="'list of owners'">List of Owners</h1>
 
+    <table>
+        <thead>
+        <tr>
+            <th>Id</th>
+            <th>First Name</th>
+            <th>Last Name</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="owner : ${owners}">
+            <td th:text="${owner.id}">1</td>
+            <td th:text="${owner.firstName}">john</td>
+            <td th:text="${owner.lastName}">doe</td>
+        </tr>
+        </tbody>
+    </table>
 </body>
 </html>
