--- a/pet-clinic-web/src/main/resources/templates/index.html
+++ b/pet-clinic-web/src/main/resources/templates/index.html
@@ -2,27 +2,9 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Pet Clinic Index</title>
+    <title>pet clinic</title>
 </head>
 <body>
-<!--/*@thymesVar id="vets" type="gipsy.springframework.petclinic.model.Vet"*/-->
 
-    <h1 th:text="'list of vets'">List of Vets</h1>
-    <table>
-        <thead>
-        <tr>
-            <th>Id</th>
-            <th>First Name</th>
-            <th>Last Name</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr th:each="vet : ${vets}">
-            <td th:text="${vet.id}">0</td>
-            <td th:text="${vet.firstName}">luc</td>
-            <td th:text="${vet.lastName}">delavega</td>
-        </tr>
-        </tbody>
-    </table>
 </body>
 </html>
