--- a/pet-clinic-web/src/main/resources/templates/owners/index.html
+++ b/pet-clinic-web/src/main/resources/templates/owners/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" th:replace="~{fragments/layout :: layout (~{::body}, 'owners')}">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
 <!--/*@thymesVar id="owner" type="gipsy.springframework.petclinic.model.Owner"*/-->
-    <h1 th:text="'list of owners'">List of Owners</h1>
+    <h2 th:text="'list of owners'">List of Owners</h2>
 
-    <table>
+    <table class="table table-striped">
         <thead>
         <tr>
-            <th>Id</th>
-            <th>First Name</th>
-            <th>Last Name</th>
+            <th style="width: 150px">Id</th>
+            <th style="width: 150px">First Name</th>
+            <th style="width: 150px">Last Name</th>
         </tr>
         </thead>
         <tbody>
