--- a/pet-clinic-web/src/main/resources/templates/notimplemented.html
+++ b/pet-clinic-web/src/main/resources/templates/notimplemented.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<h2 th:text="'Not implemented yet'!!!">not implemented yet.</h2>
+<h2 th:text="'Not implemented yet!!!'">not implemented yet.</h2>
 
 </body>
 </html>
